2008-12-15  Mark Hammond

	* Fix via the mailing list to fix strange icons being displayed on Vista.

2008-11-06  Thomas Heller  <theller@python.net>

	* Fixed a modulefinder crash on certain relative imports.

2008-11-01  Thomas Heller  <theller@python.net>

	* Changed the py2exe\samples\singlefile\gui\test_wx.py sample to
	use the wx package instead of the old wxPython package.

2008-08-28 Mark Hammond <mhammond@skippinet.com.au>

	* Copy the manifest, if any, from the 'template' into the targets
	to ensure embedded assembly references, as required for python 2.6 based
	apps, are copied.

	* Allow each target to specify Vista User Access Control flags. For 
	example, specifying 'uac_execution_info="requireAdministrator"' would
	force elevation for the final executable.

2008-05-19  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Bump version number to 0.6.8.

	* Updated test suite to be smarter about which interpreters to use
	for testing and to output stats.

	* Merged modulefinder.py r59200 from the Python svn trunk into
	mf.py in order to support relative imports.

	* Use Python 2.5 to build the source distribution.

	* Include the entire test suite in the source distribution.

2008-04-17  Thomas Heller  <theller@python.net>

	* Changes to the test suite.

	* Fix MemoryLoadLibrary to handle loading function addresses by
	ordinal numbers.  Patch and test by Matthias Miller - thanks!

2008-04-05  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Using the options compressed=1, bundle_files=3, and zipfile=None at
	the same time now works; patch from Alexey Borzenkov (sf request id
	1707920)

2008-04-04  Thomas Heller  <theller@python.net>

	* py2exe\boot_ctypes_com_server.py: Port this module from
	ctypes.com to comtypes.  Work in progress.

2008-04-01  Thomas Heller  <theller@python.net>

	* Allow renaming of single-executable files; patch from Alexey
	Borzenkov (sf request id 1516099)


2008-02-29  Thomas Heller  <theller@python.net>
